# STUDIO_ONAIR

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_ROADMAP.md  README.md  SOURCES.md  creator-studio-product-blueprint-v0.1.md
src/app/: AvatarFrameTrackingCoordinator.cpp  AvatarFrameTrackingCoordinator.h  CMakeLists.txt  CameraPreviewItem.cpp  CameraPreviewItem.h  CommercialControlsController.cpp  CommercialControlsController.h  ControllerLiveCaptureBindings.cpp  ControllerLiveCaptureBindings.h  CreatorIntelligenceController.cpp  CreatorIntelligenceController.h  CursorRecordingBinding.cpp  CursorRecordingBinding.h  DeviceCaptureController.cpp  DeviceCaptureController.h  EditorController.cpp  EditorController.h  EditorEngineWorker.cpp  EditorEngineWorker.h  EditorPreviewItem.cpp  EditorPreviewItem.h  EditorSessionTypes.h  EditorSessionWorker.cpp  EditorSessionWorker.h  ExportController.cpp  ExportController.h  ExportWorker.cpp  ExportWorker.h  FfmpegLiveRecordingEngine.cpp  FfmpegLiveRecordingEngine.h  GeneratedOverlayCache.cpp  GeneratedOverlayCache.h  IExportDestinationResolver.cpp  IExportDestinationResolver.h  ILiveCaptureBindings.h  ILiveRecordingEngine.h  IRecordingPersistence.h  LiveRecordingController.cpp  LiveRecordingController.h  LiveRecordingEngineFactory.cpp  (+56 more)
src/avatar/: AvatarModelDescriptor.cpp  AvatarModelDescriptor.h  AvatarMotionNdjsonSink.cpp  AvatarMotionNdjsonSink.h  AvatarMotionPipeline.cpp  AvatarMotionPipeline.h  AvatarMotionPlayback.cpp  AvatarMotionPlayback.h  AvatarMotionPlaybackRenderer.cpp  AvatarMotionPlaybackRenderer.h  AvatarMotionSample.h  AvatarMotionSerializer.cpp  AvatarMotionSerializer.h  AvatarParameterMapper.cpp  AvatarParameterMapper.h  AvatarProviderId.h  AvatarRenderFrame.cpp  AvatarRenderFrame.h  AvatarRenderPipeline.cpp  AvatarRenderPipeline.h  AvatarSoftwareRasterizer.cpp  AvatarSoftwareRasterizer.h  AvatarSoftwareRenderer.cpp  AvatarSoftwareRenderer.h  AvatarTrackingSession.cpp  AvatarTrackingSession.h  CMakeLists.txt  CalibrationCapture.cpp  CalibrationCapture.h  CalibrationProfile.cpp  CalibrationProfile.h  ExpressionNormalizer.cpp  ExpressionNormalizer.h  ExpressionParameters.h  ExpressionSmoother.cpp  ExpressionSmoother.h  IAvatarRenderer.h  ITrackingProvider.h  ITrackingSource.h  PrimaryFaceSelector.cpp  (+2 more)
src/capture/: AndroidDeviceSession.cpp  AndroidDeviceSession.h  AndroidProjectionSession.cpp  AndroidProjectionSession.h  AudioCaptureBlockAssembler.cpp  AudioCaptureBlockAssembler.h  AudioCaptureMailbox.cpp  AudioCaptureMailbox.h  AudioLevelMeter.cpp  AudioLevelMeter.h  AudioPcmLayout.cpp  AudioPcmLayout.h  AvatarRenderCaptureSource.cpp  AvatarRenderCaptureSource.h  BoundedAudioBlockQueue.cpp  BoundedAudioBlockQueue.h  CMakeLists.txt  CameraCaptureFrameAssembler.cpp  CameraCaptureFrameAssembler.h  CaptureFanoutSinks.cpp  CaptureFanoutSinks.h  CaptureTimestampMapper.cpp  CaptureTimestampMapper.h  DeviceCaptureStopCoordinator.cpp  DeviceCaptureStopCoordinator.h  DeviceCaptureTypes.cpp  DeviceCaptureTypes.h  IAudioBlockSink.h  ICaptureSource.h  IDeviceCaptureBackend.h  IDeviceCaptureSource.h  IPullCaptureSource.h  IScreenCaptureDiscovery.h  IScreenCapturePermission.h  IScreenCaptureSource.h  IScreenCaptureSourceFactory.h  IVideoFrameSink.h  LatestVideoFrameMailbox.cpp  LatestVideoFrameMailbox.h  NumericCaptureTargetId.cpp  (+11 more)
src/cursor/: CMakeLists.txt  CursorButton.h  CursorClickEvent.h  CursorEventPump.cpp  CursorEventPump.h  CursorEventSerializer.cpp  CursorEventSerializer.h  CursorMoveEvent.h  CursorNdjsonSink.cpp  CursorNdjsonSink.h  CursorNormalizer.cpp  CursorNormalizer.h  CursorPoint.h  ICursorSource.h
src/ffmpeg_adapter/: BgraFrameMappers.cpp  BgraFrameMappers.h  BgraFrameMappers_macos.mm  CMakeLists.txt  FfmpegAudioSegmentEncoder.cpp  FfmpegAudioSegmentEncoder.h  FfmpegCapabilityProbe.cpp  FfmpegCapabilityProbe.h  FfmpegConcatRemuxer.cpp  FfmpegConcatRemuxer.h  FfmpegEncodedDuration.cpp  FfmpegEncodedDuration.h  FfmpegMediaProbe.cpp  FfmpegMediaProbe.h  FfmpegVideoSegmentEncoder.cpp  FfmpegVideoSegmentEncoder.h
src/project_store/: CMakeLists.txt  IProjectPackageStore.h  IProjectStore.h  IRenderJobStore.h  IStudioStore.h  ITimelineStore.h  JsonProjectStore.cpp  JsonProjectStore.h  ManifestSchemaValidator.cpp  ManifestSchemaValidator.h  MigrationRunner.cpp  MigrationRunner.h  PersistentRenderJobLifecycle.cpp  PersistentRenderJobLifecycle.h  ProjectPackage.h  ProjectPackageStore.cpp  ProjectPackageStore.h  RenderJobRecovery.cpp  RenderJobRecovery.h  SqliteProjectDatabase.cpp  SqliteProjectDatabase.h  SqliteRenderJobStore.cpp  SqliteRenderJobStore.h  SqliteStudioStore.cpp  SqliteStudioStore.h  SqliteTimelineStore.cpp  SqliteTimelineStore.h
src/rnnoise_adapter/: CMakeLists.txt  RnnoiseDenoiseProcessor.cpp  RnnoiseDenoiseProcessor.h  RnnoiseRuntimeManifest.cpp  RnnoiseRuntimeManifest.h
tests/: CMakeLists.txt  README.md
tests/acceptance/: R1DurableEditAcceptanceTest.cpp  R1EffectsTextAcceptanceTest.cpp  R1FinalPhysicalAcceptanceTest.cpp  R1MltPreviewAcceptanceTest.cpp  R1ReplayStressTest.cpp  R1StudioWorkflowAcceptanceTest.cpp  R2CreatorIntelligenceAcceptanceTest.cpp  R2FinalPhysicalAcceptanceTest.cpp  R4ProjectInterchangeAcceptanceTest.cpp
tests/app/: AndroidMediaCodecSessionTest.cpp  AndroidTimelineExportPlanTest.cpp  AvatarFrameTrackingCoordinatorTest.cpp  CommercialControlsControllerTest.cpp  CreatorIntelligenceControllerTest.cpp  CursorRecordingBindingTest.cpp  DeviceCaptureControllerTest.cpp  EditorControllerTest.cpp  EditorModelsTest.cpp  EditorSessionWorkerTest.cpp  ExportControllerTest.cpp  FakeProjectPackageStore.h  GeneratedOverlayCacheTest.cpp  LiveRecordingControllerTest.cpp  MultiTrackRecordingServiceTest.cpp  PreviewGeometryTest.cpp  ProjectControllerTest.cpp  ProjectExportEngineIntegrationTest.cpp  ProjectSegmentLifecycleSinkTest.cpp  QmlSmokeTest.cpp  RecordingImportPlannerTest.cpp  RecordingPersistenceFake.h  RecordingTimelineReconcilerTest.cpp  ScreenCaptureControllerTest.cpp  ShortcutSettingsControllerTest.cpp  StudioControllerTest.cpp  (+5 more)
(+554 files in other folders)
